<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled</string>
    <string name="new_tab">New tab</string>
    <string name="new_incognito_tab">New incognito tab</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="added_to_bookmarks">Added to bookmarks</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bar_loading">Loading\u2026</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_go_back">Go back</string>
    <string name="ssl_untrusted">This certificate isn\'t from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site doesn\'t match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate isn\'t valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Save to bookmarks</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="open_bookmark">Open</string>
    <string name="pref_content_title">Page content</string>
    <string name="pref_allow_apptabs">Allow multiple tabs per app</string>
    <string name="pref_content_load_images">Load images</string>
    <string name="pref_content_load_images_summary">Display images on webpages</string>
    <string name="pref_content_block_popups">Block pop-ups</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_content_open_in_background">Open in background</string>
    <string name="pref_content_plugins">Enable plug-ins</string>
    <string name="pref_content_open_in_background_summary">Open new tabs behind the current tab</string>
    <string name="pref_content_homepage">Set homepage</string>
    <string name="pref_content_search_engine">Set search engine</string>
    <string name="pref_content_search_engine_summary">Choose a search engine</string>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format webpages to fit the screen</string>
    <string name="pref_general_title">General</string>
    <string name="pref_general_autofill_title">Auto-fill</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <string name="pref_autofill_profile_editor">Auto-fill text</string>
    <string name="pref_autofill_profile_editor_summary">Set up text to auto-fill in web forms</string>
    <string name="pref_privacy_security_title">Privacy &amp; security</string>
    <string name="pref_privacy_clear_cache">Clear cache</string>
    <string name="pref_privacy_clear_cache_summary">Clear locally cached content and databases</string>
    <string name="pref_privacy_clear_cache_dlg">Delete locally cached content and databases?</string>
    <string name="pref_privacy_cookies_title">Cookies</string>
    <string name="pref_privacy_clear_cookies">Clear all cookie data</string>
    <string name="pref_privacy_clear_cookies_summary">Clear all browser cookies</string>
    <string name="pref_privacy_clear_cookies_dlg">Delete all cookies?</string>
    <string name="pref_privacy_clear_history">Clear history</string>
    <string name="pref_privacy_clear_history_summary">Clear browser history</string>
    <string name="pref_privacy_clear_history_dlg">Delete browser history?</string>
    <string name="pref_privacy_formdata_title">Form data</string>
    <string name="pref_privacy_clear_form_data">Clear form data</string>
    <string name="pref_privacy_clear_form_data_summary">Clear all saved form data</string>
    <string name="pref_privacy_clear_form_data_dlg">Delete all saved form data?</string>
    <string name="pref_privacy_clear_passwords">Clear saved passwords</string>
    <string name="pref_privacy_clear_passwords_summary">Clear all saved passwords</string>
    <string name="pref_privacy_clear_passwords_dlg">Delete all saved passwords?</string>
    <string name="pref_privacy_location_title">Location</string>
    <string name="pref_privacy_enable_geolocation">Enable location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to request access to your location</string>
    <string name="pref_privacy_clear_geolocation_access">Clear location access</string>
    <string name="pref_privacy_clear_geolocation_access_summary">Clear location access for all websites</string>
    <string name="pref_privacy_clear_geolocation_access_dlg">Clear website location access?</string>
    <string name="pref_security_passwords_title">Passwords</string>
    <string name="pref_security_remember_passwords">Remember passwords</string>
    <string name="pref_security_remember_passwords_summary">Save usernames and passwords for websites</string>
    <string name="pref_security_save_form_data">Remember form data</string>
    <string name="pref_security_save_form_data_summary">Remember data I type in forms for later use</string>
    <string name="pref_security_show_security_warning">Show security warnings</string>
    <string name="pref_security_show_security_warning_summary">Show warning if there\'s a problem with a site\'s security</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read cookie data</string>
    <string name="pref_min_font_size">Minimum font size</string>
    <string name="pref_text_zoom">Text scaling</string>
    <string name="pref_zoom_on_double_tap">Zoom on double-tap</string>
    <string name="pref_force_userscalable">Force zoom</string>
    <string name="pref_force_userscalable_summary">Override a website\'s request to control zoom behavior</string>
    <string name="pref_inverted_category">Inverted screen rendering</string>
    <string name="pref_inverted">Inverted rendering</string>
    <string name="pref_inverted_summary">Black becomes white and vice versa</string>
    <string name="pref_inverted_contrast">Contrast</string>
    <string name="pref_default_zoom">Default zoom</string>
    <string name="pref_default_zoom_dialogtitle">Default zoom</string>
    <string name="pref_content_load_page">Open pages in overview</string>
    <string name="pref_content_load_page_summary">Show overview of newly-opened pages</string>
    <string name="pref_extras_title">Advanced</string>
    <string name="pref_extras_website_settings">Website settings</string>
    <string name="pref_extras_website_settings_summary">Advanced settings for individual websites</string>
    <string name="pref_extras_reset_default_title">Reset defaults</string>
    <string name="pref_extras_reset_default">Reset to default</string>
    <string name="pref_extras_reset_default_summary">Restore default settings</string>
    <string name="pref_extras_reset_default_dlg">Revert settings to default values?</string>
    <string name="pref_development_viewport" translatable="false">Use wide viewport</string>
    <string name="pref_development_single_column_rendering" translatable="false">Single column rendering</string>
    <string name="pref_development_normal_rendering" translatable="false">Normal rendering</string>
    <string name="pref_development_trace" translatable="false">Enable tracing</string>
    <string name="pref_development_nav_dump" translatable="false">Enable nav cache dump</string>
    <string name="pref_development_hardware_accel" translatable="false">Enable OpenGL Rendering</string>
    <string name="pref_development_hardware_accel_skia" translatable="false">Enable HW Accelerated Skia</string>
    <string name="pref_development_visual_indicator" translatable="false">Enable Visual Indicator</string>
    <string name="pref_development_cpu_upload_path" translatable="false">Enable Cpu Upload Path</string>
    <string name="js_engine_flags" translatable="false">Set JS flags</string>
    <string name="pref_development_uastring" translatable="false">UAString</string>
    <string name="pref_development_error_console" translatable="false">Show JavaScript Console</string>
    <string name="pref_development_reset_prelogin" translatable="false">Reset prelogin</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string name="pref_default_text_encoding_dialogtitle">Text encoding</string>
    <string name="pref_default_text_encoding_default" translatable="false">UTF-8</string>
    <string name="pref_accessibility_title">Accessibility</string>
    <string name="pref_font_size_category">Text size</string>
    <string name="pref_lab_title">Labs</string>
    <string name="pref_data_title">Bandwidth management</string>
    <string name="pref_data_preload_title">Search result preloading</string>
    <string name="pref_data_preload_summary">Allow browser to preload high confidence search results in the background</string>
    <string name="pref_data_preload_dialogtitle">Preload search results</string>
    <string name="pref_link_prefetch_title">Preload webpages</string>
    <string name="pref_link_prefetch_summary">Allow browser to preload linked webpages</string>
    <string name="pref_link_prefetch_dialogtitle">Preload webpages</string>
    <string name="preview">Preview</string>
    <string name="accessibility_button_back">Go back</string>
    <string name="accessibility_button_forward">Go forward</string>
    <string name="accessibility_button_newtab">Open new tab</string>
</resources>