<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:key="force_userscalable"
        android:title="@string/pref_force_userscalable"
        android:summary="@string/pref_force_userscalable_summary"
        android:defaultValue="false" />

    <PreferenceCategory android:title="@string/pref_font_size_category">
        <com.android.browser.preferences.FontSizePreview
            android:title="@string/preview" />

        <com.android.browser.preferences.SeekBarSummaryPreference
            android:key="text_zoom"
            android:title="@string/pref_text_zoom"
            android:defaultValue="10"
            android:max="30" />

        <com.android.browser.preferences.SeekBarSummaryPreference
            android:key="double_tap_zoom"
            android:title="@string/pref_zoom_on_double_tap"
            android:defaultValue="5"
            android:max="10" />

        <com.android.browser.preferences.SeekBarSummaryPreference
            android:key="min_font_size"
            android:title="@string/pref_min_font_size"
            android:defaultValue="0"
            android:max="20" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_inverted_category">
        <com.android.browser.preferences.InvertedContrastPreview
            android:title="@string/preview" />

        <CheckBoxPreference
            android:key="inverted"
            android:defaultValue="false"
            android:title="@string/pref_inverted"
            android:summary="@string/pref_inverted_summary" />

        <com.android.browser.preferences.SeekBarSummaryPreference
            android:key="inverted_contrast"
            android:title="@string/pref_inverted_contrast"
            android:dependency="inverted"
            android:defaultValue="0"
            android:max="20" />

    </PreferenceCategory>

</PreferenceScreen>
