<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen 
        xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="enable_hardware_accel"
        android:defaultValue="true"
        android:title="@string/pref_development_hardware_accel" />

    <CheckBoxPreference
        android:key="enable_hardware_accel_skia"
        android:defaultValue="false"
        android:title="@string/pref_development_hardware_accel_skia"
        android:enabled="false" />

    <ListPreference
        android:key="user_agent"
        android:title="@string/pref_development_uastring"
        android:entries="@array/pref_development_ua_choices"
        android:entryValues="@array/pref_development_ua_values"
        android:defaultValue="0"/>

    <CheckBoxPreference
        android:key="enable_visual_indicator"
        android:defaultValue="false"
        android:title="@string/pref_development_visual_indicator" />

    <CheckBoxPreference
        android:key="enable_cpu_upload_path"
        android:defaultValue="false"
        android:title="@string/pref_development_cpu_upload_path" />

    <!-- The javascript console is enabled by default when the user has
         also enabled debug mode by navigating to about:debug. -->
    <CheckBoxPreference
        android:key="javascript_console"
        android:defaultValue="true"
        android:title="@string/pref_development_error_console" />

    <CheckBoxPreference
        android:key="small_screen"
        android:defaultValue="false"
        android:title="@string/pref_development_single_column_rendering" />

    <CheckBoxPreference
        android:key="wide_viewport"
        android:defaultValue="true"
        android:title="@string/pref_development_viewport" />

    <CheckBoxPreference
        android:key="normal_layout"
        android:defaultValue="false"
        android:title="@string/pref_development_normal_rendering" />

    <CheckBoxPreference
        android:key="enable_tracing"
        android:defaultValue="false"
        android:title="@string/pref_development_trace" />

    <CheckBoxPreference
        android:key="enable_light_touch"
        android:defaultValue="false"
        android:title="Enable light touch" />

    <CheckBoxPreference
        android:key="enable_nav_dump"
        android:defaultValue="false"
        android:title="@string/pref_development_nav_dump" />

    <EditTextPreference
        android:key="js_engine_flags"
        android:title="@string/js_engine_flags"
        android:singleLine="true" />

    <Preference
        android:key="reset_prelogin"
        android:title="@string/pref_development_reset_prelogin" />

</PreferenceScreen>
