<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.


     This layout provides the structure for a browser tab. A tab contains the
     WebView and any number of other UI elements specific to that tab.
     Currently, the only such element is the Geolocation permissions prompt.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/bottom_bar_bg">

    <!-- 后退 -->
    <Button style="@style/BottomBarIconNormal"
        android:id="@+id/action_back"
        android:drawableTop="@drawable/action_backward"
        android:text="@string/accessibility_button_back" />

    <!-- 前进 -->
    <Button style="@style/BottomBarIconNormal"
        android:id="@+id/action_forward"
        android:drawableTop="@drawable/action_forward"
        android:text="@string/accessibility_button_forward" />

    <!-- 标签管理页 -->
    <Button style="@style/BottomBarIconSpecial"
        android:id="@+id/action_tabs"
        android:text="@string/accessibility_button_tabs" />

    <!-- 新建标签 -->
    <Button style="@style/BottomBarIconNormal"
        android:id="@+id/action_new_tab"
        android:drawableTop="@drawable/action_new_tab"
        android:text="@string/accessibility_button_newtab" />

</LinearLayout>
